bug fix: image stretching

--- a/assets/css/form.css
+++ b/assets/css/form.css
@@ -100,7 +100,7 @@ nav {
 /* header image */
 img {
     width: 100%;
-    max-height: 400px;
+    max-height: auto;
 }
 
 /* footer style */
